--- a/otzivi.html
+++ b/otzivi.html
@@ -10,8 +10,889 @@
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<link REL="SHORTCUT ICON" HREF="http://mathematics.by/favicon.ico">
 	<style>
-	            
-	</style>
+			.tr14 {
+				font-size:17.5px;
+				line-height:135%;
+				padding-left:6%;
+				padding-right:22%;
+			}
+			.ku {
+				width:100%;
+			}
+			.ku img {
+				width:100%;
+			}
+			.osnov {
+				display:none;
+			}
+			.view a {
+				color:rgb(39, 43, 47);
+				text-decoration:none;
+			}
+			.view {
+				text-align:center;
+				font-family:akrobat-regular;
+				color:rgb(39, 43, 47);
+				font-size:32px;
+			}
+			.view img {
+				width: 35%;
+			}
+			.vkic {
+				font-size:18px;
+			}
+			.comment_abitd {
+				text-align:right;
+				padding-right:10%;
+			}
+			.comment_abit {
+				text-align:right;
+				padding-right:12%;
+			}
+			.comment_igor {
+				text-align:left;
+				padding-left:19%;
+			}
+			.comment_igor1 {
+				text-align:left;
+				padding-left:19%;
+				margin-bottom:3%;
+			}
+			.txx2 {
+				font-size:26px;
+				margin-bottom:-5%;
+			}
+			.txx1 {
+				font-size:24px;
+			}
+			.t0 {
+				font-size:40px;
+				margin-bottom:1%;
+			}
+			.yt2v_mid {
+				display:none;
+			}
+			.yt2v_big {
+				display:none;
+			}
+			.fotk img {
+				width:31px;
+			}
+			.bigf {
+				text-align:center;
+				margin-bottom:-2%;
+			}
+			.tr9 {
+				padding-left:19%;
+				padding-right:7%;
+				padding-top:3%;
+				padding-bottom:7%;
+				font-size:18px;
+				margin-top:-1%;
+			}
+			.tq70 {
+				background-image:url(./images/background/tr13.png);
+				background-repeat:no-repeat;
+				background-size:100%;
+				width:100%;
+			}
+			.tqf2 {
+				float:left;
+				width:4%;
+			}
+			.tqf2 img {
+				height:80px;
+				width:29px;
+			}
+			.tqf1 {
+				float:left;
+				width:4%;
+			}
+			.tqf1 img {
+				height:260px;
+				width:29px;
+			}
+			.tq14 {
+				background-image:url(./images/background/tr11.png);
+				background-repeat:no-repeat;
+				background-size:100%;
+				width:100%;
+			}
+			.tr13 {
+				font-size:18px;
+				line-height:140%;
+				padding-left:19%;
+				padding-top:1%;
+				padding-right:5%;
+				padding-bottom:8%;
+			}
+			.tq13 {
+				background-image:url(./images/background/tr2.png);
+				background-repeat:no-repeat;
+				background-size:100%;
+				width:100%;
+			}
+			.tr12 {
+				font-size:17px;
+				line-height:140%;
+				padding-top:2%;
+				padding-left:6%;
+				padding-right:23%;
+				padding-bottom:5%;
+				margin-top:-1%;
+			}
+			.tq12 {
+				background-image:url(./images/background/tr9.png);
+				background-repeat:no-repeat;
+				background-size:100%;
+				width:100%;
+			}
+			.tr11 {
+				font-size:17px;
+				line-height:140%;
+				padding-left:19%;
+				padding-right:5%;
+				padding-bottom:5%;
+				padding-top:1%;
+				margin-top:-1%;
+			}
+			.tq11 {
+				background-image:url(./images/background/tr12.png);
+				background-repeat:no-repeat;
+				background-size:100%;
+				width:100%;
+			}
+			.tr10 {
+				font-size:18px;
+				padding-left:6%;
+				padding-right:24%;
+				line-height:126%;
+			}
+			.tq10 {
+				background-image:url(./images/background/tr7.png);
+				background-repeat:no-repeat;
+				background-size:100%;
+				width:100%;
+			}
+			.tq1, .tq2, .tq3, .tq4 {
+				font-size:22px;
+				color:rgb(39, 43, 47);
+			}
+			.tr5 {
+				  line-height: 140%;
+				  font-size: 18px;
+				  padding-top: 2%;
+				  padding-left: 19%;
+				  padding-right: 4%;
+				  padding-bottom: 6%;
+				  margin-top: 1%;
+				}
+			.tq9 {
+				  width: 100%;
+				  background-image: url(./images/background/tr2.png);
+				  background-repeat: no-repeat;
+				  background-size: 100%;
+				}
+			.tr4 {
+				  line-height: 140%;
+				  font-size: 18px;
+				  padding-left: 6%;
+				  padding-right: 23%;
+				  padding-bottom: 6%;
+				}
+			.yt1 {
+				  padding-left: 6%;
+				  padding-top: 2%;
+				  font-size: 18px;
+				  padding-right: 11%;
+				}
+			.yt2 {
+				  padding-left: 6%;
+				  padding-top: 4%;
+				  font-size: 18px;
+				  padding-right: 13%;
+				}
+			.yt3 {
+				  padding-left: 6%;
+				  font-size: 18px;
+				  padding-right: 13%;
+				  padding-bottom: 8%;
+				}
+			.yt4 {
+				  padding-left: 6%;
+				  font-size: 18px;
+				  padding-right: 13%;
+				  padding-top: 3%;
+				}
+			.yt5 {
+				  padding-left: 6%;
+				  font-size: 18px;
+				  padding-right: 12%;
+				  padding-bottom: 8%;
+				}
+			.tq8 {
+				  width: 100%;
+				  background-image: url(./images/background/tr5.png);
+				  background-repeat: no-repeat;
+				  background-size: 100%;
+				}
+			.tr3 {
+				  padding-right: 23%;
+				  line-height: 140%;
+				  font-size: 18px;
+				  padding-left: 6%;
+				  padding-top: 2%;
+				  padding-bottom: 5%;
+				}
+			.tq7 {
+				  width: 100%;
+				  background-image: url(./images/background/tr3.png);
+				  background-repeat: no-repeat;
+				  background-size: 100%;
+				  margin-top: 1%;
+				}
+			.tq40 {
+				  width: 100%;
+				  color: rgb(255, 90, 90);
+				  font-family: akrobat-bold;
+				  padding-bottom: 2%;
+				}
+			.tr2 {
+				  background-image: url(./images/background/tr2.png);
+				  background-repeat: no-repeat;
+				  background-size: 100%;
+				  line-height: 140%;
+				  font-size: 17px;
+				  padding-left: 19%;
+				  padding-right: 5%;
+				  padding-top: 1%;
+				  padding-bottom: 7%;
+				}
+			.tr1 {
+				  background-image: url(./images/background/tr1.png);
+				  background-repeat: no-repeat;
+				  background-size: 100%;
+				  padding-left: 6%;
+				  padding-right: 23%;
+				  padding-bottom: 7%;
+				  line-height: 140%;
+				  padding-top: 1%;
+				  font-size: 18px;
+				}
+			.tq5 {
+				  width: 100%;
+				}
+			.tq4 {
+				  width: 100%;
+				  height: 10%;
+				}
+			.tqf {
+				  float: left;
+				  width: 4%;
+				}
+			.tqf img {
+				  height: 180px;
+				  width: 29px;
+				}
+			.tqt {
+				  width: 100%;
+				}
+			.tq1,
+			.tq2,
+			.tq3,
+			.tqt,
+			.tr1,
+			.tq6,
+			.tq7,
+			.tq8,
+			.tq9,
+			.tq70,
+			.tq10,
+			.tq11,
+			.tq12,
+			.tq13,
+			.tq14 {
+				  font-family: akrobat-regular;
+				  color: rgb(39, 43, 47);
+				}
+			
+@media screen and (min-width: 1800px) {
+  			.tq6 {
+  				  margin-top: 1%;
+				  }
+			.po {
+				padding-top:1%;
+			}
+			.tyui {
+				padding-top:2%;
+			}
+			.tqf1 img {
+				height:284px;
+			}
+			.txx2 {
+				font-size:39px;
+			}
+			.txx1 {
+				font-size:39px;
+			}
+			.t0 {
+				font-size:55px;
+			}
+			.tqf2 img {
+				height:66px;
+			}
+  			.pot {
+  				  padding-top: 1%;
+  				}
+  			.tq70 {
+  				  margin-top: 2%;
+  				}
+  			.tq12 {
+  				  margin-top: 1%;
+  				}
+  			.yt2v_norm {
+  				  display: none;
+  				}
+  			.yt2v_big {
+  			 	 display: block;
+				  }
+			.fotk img {
+				width:31px;
+			}
+  			.tq13 {
+  				  background-image: url(./images/background/tr2--2.png);
+  				  margin-top: 1%;
+  				}
+  			.tq14 {
+  				  background-image: url(./images/background/tr11--11.png);
+				}
+  			.tq10 {
+  				  background-image: url(./images/background/tr7--7.png);
+  				}
+  			.tq9 {
+  				  background-image: url(./images/background/tr2--2.png);
+  				  margin-top: 2%;
+  				}
+  			.tq40 {
+  				  padding-bottom: 1%;
+  				}
+  			.tq7 {
+  				  margin-top: 1%;
+  				}
+  			.tq1,
+  			.tq2,
+  			.tq3,
+  			.tq4 {
+  				  font-size: 30px;
+  				}
+  			.tr14 {
+  				  font-size: 28px;
+  				}
+  			.tr13 {
+  				  font-size: 28px;
+  				  padding-bottom: 5%;
+  				}
+  			.tr12 {
+  				  font-size: 28px;
+  				  padding-right: 22%;
+  				  padding-bottom: 5%;
+  				  padding-top: 1.4%;
+  				}
+  			.tr11 {
+  				  font-size: 28px;
+  				  padding-bottom: 5%;
+  				  padding-right: 6%;
+  				  padding-top: 1%;
+  				}
+  			.tr10 {
+  				  font-size: 28px;
+  				}
+  			.tr5 {
+  				  font-size: 28px;
+  				  padding-bottom: 7%;
+  				  padding-right: 6%;
+  				}
+  			.tr4 {
+  				  font-size: 29px;
+  				  padding-bottom: 7%;
+  				}
+  			.tr9 {
+  				  font-size: 28px;
+  				  padding-right: 9%;
+  				  margin-top: -2%;
+  				}
+  			.yt1 {
+  				  font-size: 28px;
+  				  padding-right: 15%;
+  				}
+  			.yt2 {
+  				  font-size: 28px;
+  				  padding-top: 3%;
+  				}
+  			.yt3 {
+  				  padding-right: 14%;
+  				  font-size: 28px;
+  				  padding-bottom: 8%;
+  				}
+  			.yt4 {
+  				  font-size: 28px;
+  				}
+  			.yt5 {
+  				  font-size: 28px;
+  				  padding-bottom: 8%;
+  				}
+  			.tr3 {
+  				  font-size: 28px;
+  				  padding-bottom: 6%;
+  				}
+  			.tr2 {
+  				  font-size: 28px;
+  				  padding-bottom: 6%;
+  				  padding-top: 1%;
+  				}
+  			.tr1 {
+  				  font-size: 28px;
+  				  padding-bottom: 7%;
+  				  background-image: url(./images/background/tr1--1.png);
+  				  padding-top: 2%;
+  				}
+  			.tqf img {
+  				  height: 251px;
+  				}
+  			.tqt {
+  				  font-size: 30px;
+				  }
+			}	
+			
+@media screen and (max-width: 1280px) {
+ 			 .yt2v_norm {
+ 			 	  display: none;
+				  }
+			.txx2 {
+				margin-bottom:-4%;
+			}
+			.view img {
+				width: 35%;
+			}
+			 .tq7 {
+				 margin-top:1%;
+				}
+			.tqf1 img {
+				height:289px;
+			}
+ 			 .yt2v_mid {
+ 			 	  display: block;
+				  }
+			 .fotk img {
+				 width:33px;
+				}
+ 			 .tq9 {
+ 				   background-image: url(./images/background/tr2--2.png);
+ 				   margin-top: 2%;
+ 				 }
+ 			 .tq10 {
+ 				   background-image: url(./images/background/tr7--7.png);
+ 				 }
+ 			 .tq13 {
+ 				   background-image: url(./images/background/tr2--2.png);
+ 				   margin-top: 1%;
+ 				 }
+ 			 .yt1 {
+ 				   font-size: 20px;
+ 				   padding-right: 12%;
+ 				 }
+ 			 .yt4 {
+ 				   font-size: 20px;
+ 				 }
+ 			 .yt5 {
+					font-size: 20px;
+ 			 		padding-bottom: 8%;
+ 			 	}
+ 			 .yt3 {
+ 				   font-size: 20px;
+ 				   padding-bottom: 8%;
+ 				 }
+ 			 .yt2 {
+ 				   font-size: 20px;
+					padding-top: 2%;
+ 			 	}
+ 			 .tr13 {
+					font-size: 19px;
+ 				   padding-bottom: 7%;
+ 				 }
+ 			 .tq1,
+ 			 .tq2,
+ 			 .tq3,
+ 			 .tq4 {
+ 				   font-size: 24px;
+ 				 }
+ 			 .tr9 {
+ 				   font-size: 19px;
+ 				   padding-top: 4%;
+ 				 }
+ 			 .tr1 {
+ 				   font-size: 20px;
+ 				   background-image: url(./images/background/tr1--1.png);
+ 				   padding-top: 3%;
+ 				   padding-bottom: 6%;
+ 				 }
+ 			 .tr14 {
+ 				   font-size: 20px;
+ 				 }
+ 			 .tr12 {
+ 				   font-size: 20px;
+ 				   padding-bottom: 6%;
+ 				   padding-top: 1%;
+ 				 }
+ 			 .tr11 {
+ 				   font-size: 19px;
+ 				   padding-bottom: 5%;
+ 				   padding-top: 1%;
+ 				 }
+ 			 .tr10 {
+					font-size: 20px;
+ 				   padding-right: 22%;
+ 				 }
+ 			 .tr4 {
+ 				   font-size: 20px;
+ 				   padding-bottom: 8%;
+ 				 }
+ 			 .tr3 {
+ 				   font-size: 20px;
+ 				   padding-bottom: 6%;
+ 				 }
+ 			 .tr2 {
+ 				   font-size: 19px;
+ 				   padding-bottom: 7%;
+ 				 }
+ 			 .tqf img {
+ 				   height: 198px;
+ 				 }
+ 			 .tr5 {
+ 				   font-size: 19px;
+ 				   padding-right: 6%;
+ 				   padding-top: 3%;
+ 				   padding-bottom: 7%;
+ 				 }
+			}	
+			
+@media screen and (max-width:1245px){
+			.tr1 {
+				font-size:19px;
+			}
+			.tr11 {
+				font-size:18.5px;
+			}
+			.tr12 {
+				font-size:19px;
+			}
+			.tr10 {
+				font-size:19px;
+			}
+			.yt3 {
+				font-size:19px;
+			}
+			.yt2 {
+				font-size:19px;
+			}
+			.tr14 {
+				font-size:19px;
+			}
+			.tr3 {
+				font-size:19px;
+			}
+			.view img {
+				width:30%;
+			}
+}
+
+@media screen and (max-width:1024px){
+			.view img {
+				width:35%;
+			}
+			.fotk img {
+				width:19px;
+			}
+			.yt5 {
+				font-size:15px;
+				padding-bottom:7%;
+			}
+			.tqf1 img {
+				height:170px;
+			}
+			.tqf2 img {
+				height:41px;
+				width:19px;
+			}
+			.yt4 {
+				font-size:15px;
+			}
+			.yt2 {
+				font-size:15px;
+				padding-top:2%;
+			}
+			.yt1 {
+				font-size:15px;
+			}
+			.yt3 {
+				font-size:15px;
+				padding-bottom:8%;
+			}
+			.tr13 {
+				font-size:15px;
+			}
+			.tr12 {
+				font-size:14.2px;
+			}
+			.tr11 {
+				font-size:14px;
+				padding-bottom:6%;
+			}
+			.tr10 {
+				font-size:15px;
+			}
+			.tq1, 
+			.tq2, 
+			.tq3, 
+			.tq4 {
+				font-size:16px;
+			}
+			.tr5 {
+				font-size:15px;
+			}
+			.tr4 {
+				font-size:15px;
+				padding-bottom:7%;
+			}
+			.tr9 {
+				font-size:16px;
+				padding-bottom:6%;
+			}
+			.tr3 {
+				font-size:15px;
+			}
+			.tr2 {
+				font-size:14px;
+				padding-bottom:7%;
+			}
+			.tr1 {
+				font-size:14.5px;
+				padding-bottom:8%;
+				padding-top:2%;
+			}
+			.tqf img {
+				height:128px;
+			}
+			.tr14 {
+				font-size:15px;
+			}
+			.txx1 {
+				font-size:20px;
+			}
+}
+
+@media screen and (max-width:800px){
+			.view img {
+				width:80%;
+			}
+			.vkic {
+				font-size:10px;
+			}
+			.txx2 {
+				font-size:20px;
+			}
+			.txx1 {
+				font-size:14px;
+			}
+			.t0 {
+				font-size:22px;
+			}
+			.fotk img {
+				width:22px;
+			}
+			.vie {
+				display:none;
+			}
+			.tqf2 img {
+				height:44px;
+				width:12px;
+			}
+			.tqf img {
+				height:137px;
+				width:14px;
+			}
+			.tqf1 img {
+				width:12px;
+			}
+			.osn4 a {
+				color:rgb(39, 43, 47);
+				font-style:italic;
+			}
+			.osn4 {
+				width:100%;
+				text-align:center;
+				font-size:18px;
+				font-family:akrobat-bold;
+			}
+			.osn3 {
+				width:100%;
+				text-align:center;
+				font-size:25px;color:rgb(255, 90, 90);
+				font-family:akrobat-bold;
+				line-height:23px;
+			}
+			.osn2 img {
+				width:50%;
+			}
+			.osn2 {
+				width:100%;
+				text-align:center;
+				margin-top:7%;
+				margin-bottom:-1%;
+			}
+			.osn1 {
+				color:rgb(255, 90, 90);
+				width:100%;
+				text-align:center;
+				font-size:28px;
+				font-family:akrobat-bold;
+				line-height:31.5px;
+			}
+			.pred {
+				width:100%;
+				margin-top:-10%;
+			}
+			.pred1 {
+				width:10%;
+				float:left;
+			}
+			.pred1 img {
+				width:100%;
+				height:386px;
+			}
+			.pred4 {
+				width:10%;
+				float:left;
+			}
+			.pred4 img {
+				width:100%;
+				height:152px;
+			}
+			.pred3 {
+				width:10%;
+				float:left;
+			}
+			.pred3 img {
+				width:100%;
+				height:594px;
+			}
+			.pred2 {
+				width:89%;
+				float:left;
+				margin-bottom:5%;
+			}
+			.osnov {
+				display:block;
+				font-family:akrobat-regular;
+				color:rgb(39, 43, 47);
+				font-size:22px;
+			}
+			.tq5, 
+			.tq6, 
+			.tq7, 
+			.tq70, 
+			.tq8, 
+			.tq9, 
+			.tq10, 
+			.tq11, 
+			.tq12, 
+			.tq13, 
+			.tq14, 
+			.tq40, 
+			.tq4 {
+				display:none;
+			}
+			.tr14 {
+				font-size:7px;
+			}
+			.tr13 {
+				font-size:7px;
+				padding-bottom:6%;
+			}
+			.tr12 {
+				font-size:7px;
+				padding-bottom:8%;
+			}
+			.tr11 {
+				font-size:7px;
+			}
+			.tr10 {
+				font-size:7px;
+				padding-bottom:8%;
+			}
+			.tq1, 
+			.tq2, 
+			.tq3, 
+			.tq4 {
+				font-size:22px;
+				padding-left:2%;
+				margin-top:-4%;
+			}
+			.tr5 {
+				font-size:7px;
+			}
+			.tr4 {
+				font-size:7px;
+				padding-bottom:9%;
+			}
+			.tr9 {
+				font-size:8px;
+			}
+			.tr3 {
+				font-size:7px;
+			}
+			.tr2 {
+				font-size:7px;
+			}
+			.tr1 {
+				font-size:8px;
+			}
+}
+
+@media screen and (max-width:360px) {
+			.osn4 {
+				margin-bottom:2%;
+			}
+			.osn3 {
+				margin-bottom:2%;
+			}
+			.pred4 img {
+				height:178px;
+			}
+			.pred3 img {
+				height:724px;
+			}
+			.pred1 img {
+				height:464px;
+			}
+
+}
+
+@media screen and (max-width:330px){
+			.pred4 img {
+				height:178px;
+			}
+			.pred3 img {
+				height:802px;
+			}
+			.pred1 img {
+				height:542px;
+			}
+}
+
+
+
+		</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114776658-1"></script>
 <script>
