--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ</a><br>
 					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
-					<a class="blink" href="texraboti.html">Математика для взрослых</a><br>
+					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
 					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицей, колледж</a><br>
-					<a class="blink" href="texraboti.html">Репетитор по русскому языку</a><br>
+					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
 			</div>
 			<div class="menu_vbig">
@@ -69,10 +69,10 @@
 					<a class="blink" href="uslovia_i_ceny2.html">Подготовка к ЦТ</a><br>
 					<a class="blink" href="podgotovka_k_ekzamenu.html">Высшая математика</a><br>
 					<a class="blink" href="shkolnikam.html">Математика для школьников</a><br>
-					<a class="blink" href="texraboti.html">Математика для взрослых</a><br>
+					<a class="blink" href="mathematics-for-professionals.html">Математика для взрослых</a><br>
 					<a class="blink" href="pomosch_reshenii_zadach.html">Онлайн репетитор</a><br>
 					<a class="blink" href="metodika_prepodavania.html">Подготовка в лицей, колледж</a><br>
-					<a class="blink" href="texraboti.html">Репетитор по русскому языку</a><br>
+					<a class="blink" href="russian-language-tutor.html">Репетитор по русскому языку</a><br>
 				</div>
 			</div>
 			<div class="fon">
