--- a/otzivi.html
+++ b/otzivi.html
@@ -430,6 +430,20 @@
 подтверждение. Нередко, читая отзывы о репетиторах по математике, невольно задумываешься: «А кто их писал? Преподаватели  или ученики? <span class="fotk"><img src="./images/advantages/smile.png" style="vertical-align: middle;"></span> А что думает по поводу отзыва  сам педагог? Хороший репетитор он или не очень? » Заходишь на очередной «лучший сайт репетиторов», а самые лучшие 
 репетиторы <span class="fotk"><img src="./images/advantages/smile.png" style="vertical-align: middle;"></span> уже другие, не те, что на прошлом сайте. Вопрос «как найти хорошего репетитора?» всегда 
 актуален.	</div>
+			<div class="ck"> 
+				<a href="https://www.youtube.com/watch?v=EYH5g5kS_xg" target="_blank">
+					<img alt="Репетитор по математике в Минске"
+						class="image1"  
+						src="images/photo/results-2023.jpg" 
+						title="Репетитор по математике в Минске"></a>
+				<!-- </a> При наличии tab-ов или даже переноса строки - добавляет между фото фиолетовую ссылку длиной в пробел -->
+				<a href="https://youtu.be/n_nD7EeA1Wc" target="_blank">
+					<img alt="Занятия по математике в группах"
+						class="image" 
+						src="images/photo/tutor.jpg" 
+						title="Занятия по математике в группах">
+				</a>
+			</div>
 	<br>
 	<div class="tq3">
 		На мой взгляд, неправильно было бы разместить здесь только отзывы самых успешных учеников, например, 
