--- a/russian-language-tutor.html
+++ b/russian-language-tutor.html
@@ -84,7 +84,7 @@
 					<img src="./images/advantages/mts.png"
 					 	alt="tech">
 						<a href="tel:+375295021002">+375(29)502-10-02</a><br>
-					<img src="./images/advantages/velcom.jpg"
+					<img src="./images/advantages/velccom.png"
 					 	alt="tech">
 						<a href="tel:+375444565275">+375(44)456-52-75</a><br>
 					<img src="./images/advantages/viber.png"
@@ -322,7 +322,7 @@
 				</div>
 				<div class="glf2">
 					<img src="./images/advantages/viber.png"> <a style="text-decoration: none;" href="viber://add?number=375295021002">+375(29)502-10-02</a><br>
-					<img src="./images/advantages/telegram.png"><a style="text-decoration: none;" href="https://t.me/+375295021002">+375(29)502-10-02</a><br>
+					<img src="./images/advantages/telegram.png"> <a style="text-decoration: none;" href="https://t.me/+375295021002">+375(29)502-10-02</a><br>
 				</div>
 				<div class="glf3">
 					<img src="./images/advantages/world-map.png"> <a href="site_map.html">Карта сайта</a><br>
