--- a/otzivi.html
+++ b/otzivi.html
@@ -203,9 +203,12 @@
 		</div>
 		<div class="fon">
 			<div class="foncall">
-				<img src="./images/advantages/mts.png"><a href="tel:+375298515251">+375(29)851-52-51</a><br>
-				<img src="./images/advantages/velcom.jpg"><a href="tel:+375296575971">+375(29)657-59-71</a><br>
-				<img src="./images/advantages/vib.png"><a href="tel:+375172400021">+375(17)240-00-21</a>
+				<img src="./images/advantages/mtts.png"> <a href="tel:+375298515251">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/velccom.png"> <a href="tel:+375296575971">+375(29)657-59-71</a><br>
+				<img src="./images/advantages/calls.png"> <a href="tel:+375172400021">+375(17)240-00-21</a><br>
+				<img src="./images/advantages/viber.png"> <a href="viber://add?number=375296575971">+375(29)657-59-71</a><br>
+				<img src="./images/advantages/telegram.png"> <a href="tg://resolve?domain=mathematicsby">+375(29)851-52-51</a><br>
+				<img src="./images/advantages/whatts.png"> <a href="whatsapp://send?text=Hello&phone=+375296575971&abid=+375296575971">+375(29)657-59-71</a><br>
 			</div>
 			<div class="otz">
 			<div class="ot0">
