--- a/podgotovka_k_ekzamenu.html
+++ b/podgotovka_k_ekzamenu.html
@@ -320,7 +320,6 @@
 		</div>
 		
 		<div class="main">
-
 			<div class="right1">
 				<span class="skr">
 					<a href="otzivi.html">Отзывы о репетиторе с комментариями</a>
@@ -331,48 +330,50 @@
 				<span class="h21">Подготовка к экзамену</span>
 			</h2>
 
-			<p class="zgt">
-				1. Зачастую, многие студенты полагают, что, поступив в ВУЗ, они обязательно через 5 лет получат диплом. Это не совсем так. Высшее образование не является обязательным и не предполагает «разжевывания» материала, многое дается на самостоятельную проработку. Далеко не все оказываются готовы к такому подходу. В результате - пересдача (в лучшем случае). Не является секретом, что большинство студентов отчисляют на 1-м и 2-м курсах, что вполне разумно. Зачем держать неуспевающих студентов? Наиболее «отсевным» предметом является высшая математика (ТВ и МС, математическое программирование), благодаря которой обычно отчисляется больше студентов, чем по всем остальным предметам вместе взятым. Это вполне логично, т.к. выучить математику невозможно, требуется понимание данного материала и умение применять его на практике. Далеко не каждому под силу разобраться самостоятельно, но, как говорится, пока гром не грянет, мужик не перекрестится.
-			</p>
-			<p class="zgt">
-				Совет: не стоит доводить дело до пересдачи, решайте проблемы по мере их появления.
-			</p>
-			<p class="zgt">
-				Если же ситуация на грани отчисления - отчаиваться не стоит, проблему можно решить, но будьте готовы, что придется приложить максимум усилий.
-			</p>
-			<p class="zgt">
-				2. Предложение:
-			</p>
-			<p class="zgt">
-				- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 17,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
-			</p>
-			<p class="zgt">
-				- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
-			</p>
-			<p class="zgt">
-				- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-6 человек.
-			</p>
-			<p class="zgt">
-				- количество занятий: 1-2 раза в неделю (90-135-180 минут). При ограничении во времени частоту занятий желательно  увеличить.
-			</p>
-			<p class="zgt">
-				- для студентов математичкских факультетов и специальностей (включая прикладные) цену следует уточнить.
-			</p>
-			<p class="zgt">
-				- для тех, кому требуется экстренная помощь (несколько занятий), нужно смотреть раздел «Консультации».
-			</p>
-			<p class="zgt">
-				3. Записаться на занятия можно по телефонам: <br><br>
-				<b>
-					8-017-37-222-73 (городской)<br>
-					8-029-657-59-71 (Velcom)<br>
-					8-029-851-52-51 (MTS)
-				</b>
-			</p>
-			<p class="zgt">
-				P.S.: Занятия проходят на территории преподавателя.
-			</p>
-		<div class="clear"></div>
+			<div id="realmain" class="zgt">
+				<p class="zgt">
+					1. Зачастую, многие студенты полагают, что, поступив в ВУЗ, они обязательно через 5 лет получат диплом. Это не совсем так. Высшее образование не является обязательным и не предполагает «разжевывания» материала, многое дается на самостоятельную проработку. Далеко не все оказываются готовы к такому подходу. В результате - пересдача (в лучшем случае). Не является секретом, что большинство студентов отчисляют на 1-м и 2-м курсах, что вполне разумно. Зачем держать неуспевающих студентов? Наиболее «отсевным» предметом является высшая математика (ТВ и МС, математическое программирование), благодаря которой обычно отчисляется больше студентов, чем по всем остальным предметам вместе взятым. Это вполне логично, т.к. выучить математику невозможно, требуется понимание данного материала и умение применять его на практике. Далеко не каждому под силу разобраться самостоятельно, но, как говорится, пока гром не грянет, мужик не перекрестится.
+				</p>
+				<p class="zgt">
+					Совет: не стоит доводить дело до пересдачи, решайте проблемы по мере их появления.
+				</p>
+				<p class="zgt">
+					Если же ситуация на грани отчисления - отчаиваться не стоит, проблему можно решить, но будьте готовы, что придется приложить максимум усилий.
+				</p>
+				<p class="zgt">
+					2. Предложение:
+				</p>
+				<p class="zgt">
+					- индивидуальные занятия, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 17,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+				</p>
+				<p class="zgt">
+					- занятия в паре, продолжительность от 2-х (90 минут) до 3-х (135 минут) академических часов, стоимость 15 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час.
+				</p>
+				<p class="zgt">
+					- занятия в мини группах, продолжительность от 2-х (90 минут) до 3 (135 минут) академических часа, стоимость 12,5 долларов США по курсу продажи в коммерческих банках Республики Беларусь за один академический час. В группе 3-6 человек.
+				</p>
+				<p class="zgt">
+					- количество занятий: 1-2 раза в неделю (90-135-180 минут). При ограничении во времени частоту занятий желательно  увеличить.
+				</p>
+				<p class="zgt">
+					- для студентов математичкских факультетов и специальностей (включая прикладные) цену следует уточнить.
+				</p>
+				<p class="zgt">
+					- для тех, кому требуется экстренная помощь (несколько занятий), нужно смотреть раздел «Консультации».
+				</p>
+				<p class="zgt">
+					3. Записаться на занятия можно по телефонам: <br><br>
+					<b>
+						8-017-37-222-73 (городской)<br>
+						8-029-657-59-71 (Velcom)<br>
+						8-029-851-52-51 (MTS)
+					</b>
+				</p>
+				<p class="zgt">
+					P.S.: Занятия проходят на территории преподавателя.
+				</p>
+			</div>
+			<div class="clear"></div>
 	</div>
 	<div class="clear"></div>
 	<div class="right1">
