--- a/otzivi.html
+++ b/otzivi.html
@@ -412,17 +412,17 @@
 	</div>
 	<div class="main">
 	<div class="kn">
-		<a target="_blank" href="https://www.google.ru/maps/place/Репетитор+по+математике+и+высшей+математике/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"><div class="kn1">
+		<a target="_blank" href="https://zoon.by/minsk/p-repetitor/igor_viktorovich_ignatev/"><div class="kn1">
+			ОТЗЫВЫ В ZOON
+		</div></a>
+		<a target="_blank" href="https://www.google.ru/maps/place/Репетитор+по+математике+и+высшей+математике/@53.8441701,27.4731643,17z/data=!4m7!3m6!1s0x46dbd08fe2ccda05:0xa95d082eeede3ee2!8m2!3d53.844167!4d27.475353!9m1!1b1"><div class="kn2">
 			ОТЗЫВЫ В GOOGLE
 		</div></a>
-		<a target="_blank" href="https://yandex.by/profile/1373635637"><div class="kn2">
+		<a target="_blank" href="https://yandex.by/profile/1373635637"><div class="kn3">
 			ОТЗЫВЫ НА ЯНДЕКС 
 		</div></a>
-		<a href="cabinet.html"><div class="kn3">
-			ЗАЛ ДЛЯ ЗАНЯТИЙ
-		</div></a>
-		<a href="mestopolozhenie.html#karta"><div class="kn4">
-			МЕСТОПОЛОЖЕНИЕ
+		<a target="_blank" href="https://uslugi.yandex.ru/profile/IgorViktorovichIgnatev-199845"><div class="kn4">
+			ЯНДЕКС УСЛУГИ
 		</div></a>
 	</div><br>
 	<div class="tq1">
